--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit==1.37.1
+streamlit==1.36.0
 pandas==2.2.2
 numpy==1.26.4
 matplotlib==3.8.4
+plotly==5.22.0
 Pillow==10.3.0
+altair==5.3.0
